# astrx-mcp-server

./: .gitignore  Dockerfile  README.md  README_ENRICH.md  app.py  claude_config_example.json  config.json  gradio_app.py  logic.py  mcp_server.py  modal_ops.py  pyproject.toml  requirements.txt  scraper.py  test_logic.py
.github/workflows/: main.yml  scraper.yml
data/: Animal Traits Observations.csv  animals.json  animals_enriched.json
data/versions/: animals_20251130_055321.json
local_scraper/: Dockerfile  docker-compose.yml  requirements-scraper.txt  run_scraper_service.py  scraper.py
scripts/: archive_data.py  download_and_merge.py  enrich_animals_modal.py  fetch_animals_modular.py  merge_data.py  merge_external_datasets.py  rebase_missing_matches.py  validate_data.py
tests/: test_pipeline.py
tools/: list_animals.py
